# YoutuDlp

./: .ignore  AGENTS.md  Cargo.toml  README.md  build.cmd  design.md  technical-design-v1.md
src/: app.rs  cookies.rs  downloads.rs  events.rs  library.rs  main.rs  settings.rs  storage.rs  tasks.rs  tools.rs  web.rs
web/: index.html
